--- a/conf.yaml
+++ b/conf.yaml
@@ -9,13 +9,15 @@ q_list:
   - 1000
   - 10000
 N_list:
-  - 100000
+  - 1000
 n_iter: 10
 n_per_cat: 3
 fixed_intercept: 1
 n_fixed_effects: 10
 deep: 'yes'
-non_linear: True
+X_non_linear: True
+Z_non_linear: False
+Z_embed_dim_pct: 10
 batch: 30
 epochs: 500
 patience: 10
