--- a/conf_multiple_categoricals.yaml
+++ b/conf_multiple_categoricals.yaml
@@ -1,3 +1,5 @@
+mode: 'intercepts'
+estimated_cors: []
 sig2e_list:
   - 1.0
 sig2b_list:
@@ -12,6 +14,7 @@ q_list:
     - 1000
   -
     - 10000
+rho_list: []
 N_list:
   - 100000
 n_iter: 5
