--- a/conf_random_slopes.yaml
+++ b/conf_random_slopes.yaml
@@ -1,8 +1,19 @@
-mode: 'intercepts'
-estimated_cors: []
+mode: 'slopes'
+estimated_cors:
+  - '01'
+  - '02'
+  - '12'
 sig2e_list:
   - 1.0
 sig2b_list:
+  -
+    - 0.1
+    - 1.0
+    - 10.0
+  -
+    - 0.1
+    - 1.0
+    - 10.0
   -
     - 0.1
     - 1.0
@@ -12,9 +23,18 @@ q_list:
     - 100
     - 1000
     - 10000
-rho_list: []
+rho_list:
+  -
+    - 0.5
+    - -0.5
+  -
+    - 0.5
+    - -0.5
+  -
+    - 0.5
+    - -0.5
 N_list:
-  - 100000
+  - 10000
 n_iter: 5
 n_per_cat: 3
 fixed_intercept: 1
