--- a/conf_files/conf_multiple_categoricals.yaml
+++ b/conf_files/conf_multiple_categoricals.yaml
@@ -1,7 +1,5 @@
-mode: 'slopes'
-estimated_cors:
-  - '01'
-  - '02'
+mode: 'intercepts'
+estimated_cors: []
 sig2e_list:
   - 1.0
 sig2b_list:
@@ -11,17 +9,14 @@ sig2b_list:
   -
     - 0.5
     - 5.0
-  -
-    - 0.5
-    - 5.0
 q_list:
   -
+    - 1000
     - 10000
-rho_list:
   -
-    - 0.5
-  -
-    - 0.5
+    - 1000
+    - 10000
+rho_list: []
 N_list:
   - 100000
 n_iter: 5
@@ -32,6 +27,6 @@ deep: 'yes'
 X_non_linear: True
 Z_non_linear: False
 Z_embed_dim_pct: 10
-batch: 30
+batch: 100
 epochs: 500
 patience: 10
