--- a/conf_files/conf_random_slopes.yaml
+++ b/conf_files/conf_random_slopes.yaml
@@ -1,5 +1,7 @@
-mode: 'intercepts'
-estimated_cors: []
+mode: 'slopes'
+estimated_cors:
+  - '01'
+  - '02'
 sig2e_list:
   - 1.0
 sig2b_list:
@@ -9,12 +11,17 @@ sig2b_list:
   -
     - 0.5
     - 5.0
+  -
+    - 0.5
+    - 5.0
 q_list:
   -
-    - 1000
-  -
     - 10000
-rho_list: []
+rho_list:
+  -
+    - 0.5
+  -
+    - 0.5
 N_list:
   - 100000
 n_iter: 5
@@ -25,6 +32,6 @@ deep: 'yes'
 X_non_linear: True
 Z_non_linear: False
 Z_embed_dim_pct: 10
-batch: 30
+batch: 100
 epochs: 500
 patience: 10
