--- a/conf_files/conf_spatial_embedded.yaml
+++ b/conf_files/conf_spatial_embedded.yaml
@@ -1,4 +1,4 @@
-mode: 'spatial'
+mode: 'spatial_embedded'
 estimated_cors: []
 sig2e_list:
   - 1.0
@@ -6,16 +6,13 @@ sig2b_list:
   -
     - 0.1
     - 1.0
-    - 10.0
   -
     - 0.1
     - 1.0
-    - 10.0
 q_list:
   -
     - 100
     - 1000
-    - 10000
 rho_list: []
 N_list:
   - 100000
@@ -24,6 +21,7 @@ n_per_cat: 3
 fixed_intercept: 1
 n_fixed_effects: 10
 spatial_embed_neurons:
+  - 10
 n_neurons:
   - 100
   - 50
