Adds option to choose which exp_type to run

--- a/conf_files/conf_random_intercepts.yaml
+++ b/conf_files/conf_random_intercepts.yaml
@@ -38,3 +38,9 @@ epochs: 500
 patience: 10
 verbose: False
 log_params: False
+exp_types:
+  - 'lmmnn'
+  - 'ignore'
+  - 'ohe'
+  - 'embeddings'
+  - 'menet'
