--- a/conf_files/conf_random_intercepts.yaml
+++ b/conf_files/conf_random_intercepts.yaml
@@ -20,6 +20,9 @@ n_per_cat: 3
 fixed_intercept: 1
 n_fixed_effects: 10
 spatial_embed_neurons:
+weibull_nu:
+weibull_lambda:
+p_censor_list:
 n_neurons:
   - 100
   - 50
