--- a/conf_files/conf_survival.yaml
+++ b/conf_files/conf_survival.yaml
@@ -1,4 +1,4 @@
-mode: 'glmm'
+mode: 'survival'
 estimated_cors: []
 sig2e_list:
   - 1.0
@@ -20,9 +20,12 @@ n_per_cat: 3
 fixed_intercept: 1
 n_fixed_effects: 10
 spatial_embed_neurons:
-weibull_nu:
-weibull_lambda:
+weibull_nu: 2
+weibull_lambda: 1
 p_censor_list:
+  - 1
+  - 10
+  - 30
 n_neurons:
   - 100
   - 50
@@ -36,13 +39,10 @@ activation: 'relu'
 X_non_linear: True
 Z_non_linear: False
 Z_embed_dim_pct: 10
-batch: 30
+batch: 100
 epochs: 500
 patience: 10
 verbose: False
 log_params: False
 exp_types:
   - 'lmmnn'
-  - 'ignore'
-  - 'ohe'
-  - 'embeddings'
