--- a/conf_files/conf_spatial_and_categoricals.yaml
+++ b/conf_files/conf_spatial_and_categoricals.yaml
@@ -16,18 +16,18 @@ sig2b_list:
     - 0.5
     - 5.0
 q_spatial_list:
-  - 100
   - 1000
+  - 10000
 q_list:
   -
-    - 100
     - 1000
+    - 10000
   -
-    - 100
     - 1000
+    - 10000
 rho_list: []
 N_list:
-  - 10000
+  - 100000
 n_iter: 5
 n_per_cat: 3
 fixed_intercept: 1
@@ -52,7 +52,7 @@ Z_embed_dim_pct: 10
 batch: 100
 epochs: 500
 patience: 10
-verbose: True
+verbose: False
 log_params: False
 exp_types:
   - 'lmmnn'
