--- a/conf_files/conf_spatial.yaml
+++ b/conf_files/conf_spatial.yaml
@@ -44,7 +44,7 @@ Z_embed_dim_pct: 10
 batch: 100
 epochs: 500
 patience: 10
-verbose: True
+verbose: False
 log_params: False
 exp_types:
   - 'lmmnn'
