--- a/conf_files/conf_random_intercepts.yaml
+++ b/conf_files/conf_random_intercepts.yaml
@@ -14,7 +14,7 @@ q_list:
     - 10000
 rho_list: []
 N_list:
-  - 100000
+  - 10000
 n_iter: 5
 n_per_cat: 3
 fixed_intercept: 1
@@ -39,13 +39,9 @@ X_non_linear: True
 Z_non_linear: False
 Z_embed_dim_pct: 10
 batch: 30
-epochs: 500
+epochs: 5
 patience: 10
-verbose: False
-log_params: False
+verbose: True
+log_params: True
 exp_types:
   - 'lmmnn'
-  - 'ignore'
-  - 'ohe'
-  - 'embeddings'
-  - 'menet'
