--- a/conf_files/conf_random_slopes.yaml
+++ b/conf_files/conf_random_slopes.yaml
@@ -6,22 +6,22 @@ sig2e_list:
   - 1.0
 sig2b_list:
   -
-    - 0.5
-    - 5.0
+    - 0.3
+    - 3.0
   -
-    - 0.5
-    - 5.0
+    - 0.3
+    - 3.0
   -
-    - 0.5
-    - 5.0
+    - 0.3
+    - 3.0
 q_list:
   -
     - 10000
 rho_list:
   -
-    - 0.5
+    - 0.3
   -
-    - 0.5
+    - 0.3
 N_list:
   - 100000
 n_iter: 5
@@ -50,8 +50,9 @@ Z_embed_dim_pct: 10
 batch: 100
 epochs: 500
 patience: 10
-verbose: False
+verbose: True
 log_params: False
+longitudinal_predict_future: False
 exp_types:
   - 'lmmnn'
   - 'ignore'
