minor changes to conf files

--- a/conf_files/conf_random_slopes.yaml
+++ b/conf_files/conf_random_slopes.yaml
@@ -50,7 +50,7 @@ Z_embed_dim_pct: 10
 batch: 100
 epochs: 500
 patience: 10
-verbose: True
+verbose: False
 log_params: False
 longitudinal_predict_future: False
 exp_types:
